--- a/ComixAHistory/ComixAHistory.html
+++ b/ComixAHistory/ComixAHistory.html
@@ -19,7 +19,7 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="ComixAHistory1.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="ComixAHistory2.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -29,7 +29,7 @@
 </p><p>
 With graphic design assistance from Mad Peck Studios, this was one of the first attempts to break down the history of comic books and chart the creative high points for a general audience, and it was also one of the first attempts outside ZAP to try to make comics seem edgy and cool by sticking an “X” in there. 
 </p><p>
-Daniels gets s lot of stuff right. He gives roughly equal time to EC, Marvel, and the ‘60s underground, and provides little primers on the funny animal genre and the birth of the Comics Code Authority.
+Daniels gets a lot of stuff right. He gives roughly equal time to EC, Marvel, and the ‘60s underground, and provides little primers on the funny animal genre and the birth of the Comics Code Authority.
 </p>
 
 </body>
