--- a/index.html
+++ b/index.html
@@ -772,6 +772,13 @@
 </tr>
 
 <tr>
+<td>40 Big Pages Of Mickey Mouse</td>
+<td>1936</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>40 Oz Collected</td>
 <td>1998</td>
 <td>Image</td>
@@ -2615,6 +2622,13 @@
 </tr>
 
 <tr>
+<td>Adventures In Disneyland</td>
+<td>1955</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures In Oz</td>
 <td>2006</td>
 <td>IDW</td>
@@ -3090,6 +3104,13 @@
 </tr>
 
 <tr>
+<td>Adventures Of Tintin</td>
+<td>1959</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures Of Young Dr. Masters</td>
 <td>1964</td>
 <td>Archie</td>
@@ -3444,6 +3465,13 @@
 <td>2011</td>
 <td>Viz</td>
 <td><a href="Viz/Viz.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ain't It A Grand And Glorious Feeling?</td>
+<td>1922</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4281,6 +4309,13 @@
 <td>2010</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Alice In Wonderland Meets Santa</td>
+<td>1950</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5677,6 +5712,13 @@
 </tr>
 
 <tr>
+<td>Amazing Spider-Man In Weather Forecast: Danger</td>
+<td>1976</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Amazing Stories</td>
 <td>1926</td>
 <td>Experimenter</td>
@@ -6440,10 +6482,24 @@
 </tr>
 
 <tr>
+<td>Andy Hardy And The New Automatic Gas Clothes Dryer</td>
+<td>1952</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Andy Kubert</td>
 <td>1962</td>
 <td>Creator</td>
 <td><a href="AndyKubert/AndyKubert.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Andy Panda All Picture Comics</td>
+<td>1943</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8109,6 +8165,13 @@
 <td>1998</td>
 <td>A Silent Comics</td>
 <td><a href="ASilent/ASilent.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Art Alternatives Magazine</td>
+<td>1992</td>
+<td>OB Enterprises</td>
+<td><a href="ArtAlternatives/ArtAlternatives.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10427,6 +10490,13 @@
 </tr>
 
 <tr>
+<td>Bambi</td>
+<td>1984</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bamm-Bamm And Pebbles Flintstone</td>
 <td>1964</td>
 <td>Gold Key</td>
@@ -10951,6 +11021,13 @@
 </tr>
 
 <tr>
+<td>Batman</td>
+<td>1989</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Batman / Danger Girl</td>
 <td>2005</td>
 <td>Wildstorm</td>
@@ -10979,6 +11056,13 @@
 </tr>
 
 <tr>
+<td>Batman And Robin: Four Birds Of A Feather</td>
+<td>1989</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Batman And The Outsiders</td>
 <td>2019</td>
 <td>DC</td>
@@ -10997,6 +11081,13 @@
 <td>1993</td>
 <td>Abbeville</td>
 <td><a href="AbbevillePress/AbbevillePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Batman The Animated Series: Plants Of Peril</td>
+<td>1993</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12035,6 +12126,20 @@
 </tr>
 
 <tr>
+<td>Ben Casey Film Stories</td>
+<td>1962</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ben Franklin Kite Fun Book</td>
+<td>1975</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beneath The Dead Oak Tree</td>
 <td>2018</td>
 <td>Shortbox</td>
@@ -12415,6 +12520,13 @@
 <td>2007</td>
 <td>Titan</td>
 <td><a href="TitanBooks/TitanBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Best Of Walt Disney Comics</td>
+<td>1974</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13789,6 +13901,13 @@
 <td>2002</td>
 <td>AIT Planet Lar</td>
 <td><a href="AITPlanetLar/AITPlanetLar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Black Hole</td>
+<td>1979</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15996,6 +16115,13 @@
 </tr>
 
 <tr>
+<td>Boys' And Girls' March Of Comics</td>
+<td>1946</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bozz Chronicles</td>
 <td>1985</td>
 <td>Epic</td>
@@ -16007,6 +16133,13 @@
 <td>1989</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brady Bunch Kite Fun Book</td>
+<td>1976</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16266,6 +16399,13 @@
 <td>1957</td>
 <td>Creator</td>
 <td><a href="BrendanMcCarthy/BrendanMcCarthy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brer Rabbit In Ice Cream For The Party</td>
+<td>1955</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17060,6 +17200,13 @@
 </tr>
 
 <tr>
+<td>Bufalo Bill Jr.</td>
+<td>1965</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Buffalo Wings</td>
 <td>1993</td>
 <td>Antarctic Press</td>
@@ -17127,6 +17274,13 @@
 <td>1962</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bugs Le Lapin</td>
+<td>1972</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17375,6 +17529,13 @@
 </tr>
 
 <tr>
+<td>Buster Brown Goes To Mars</td>
+<td>1958</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Buster Keaton</td>
 <td>1982</a>
 <td>Eclipse</td>
@@ -17428,6 +17589,13 @@
 <td>2000</td>
 <td>Arrow</td>
 <td><a href="ArrowComics/ArrowComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Buttons And Fatty In The Funnies</td>
+<td>1927</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17809,6 +17977,13 @@
 </tr>
 
 <tr>
+<td>Camp Comics</td>
+<td>1942</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Camping With Bigfoot</td>
 <td>1995</td>
 <td>Slave Labor</td>
@@ -18061,10 +18236,24 @@
 </tr>
 
 <tr>
+<td>Captain America Giant Comics To Color</td>
+<td>1976</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain America Sentinel Of Liberty</td>
 <td>1979</td>
 <td>Simon And Schuster</td>
 <td><a href="SimonAndSchuster/SimonAndSchuster.html">Details</td>
+</tr>
+
+<tr>
+<td>Captain And The Kids</td>
+<td>1934</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18156,6 +18345,13 @@
 <td>2010</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Captain Easy And Wash Tubbs</td>
+<td>1934</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18341,6 +18537,13 @@
 </tr>
 
 <tr>
+<td>Captain Nice</td>
+<td>1967</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Oblivion</td>
 <td>1987</td>
 <td>Harrier</td>
@@ -18369,6 +18572,13 @@
 </tr>
 
 <tr>
+<td>Captain Ray-O-Vac's Adventure And Game Book</td>
+<td>1952</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Savage</td>
 <td>1950</td>
 <td>Avon</td>
@@ -18387,6 +18597,13 @@
 <td>1945</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Captain Sindbad</td>
+<td>1963</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18422,6 +18639,13 @@
 <td>2006</td>
 <td>Marvel</td>
 <td><a href="CaptainUniverse/CaptainUniverse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Captain Venture And The Land Beneath The Sea</td>
+<td>1968</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20119,6 +20343,13 @@
 </tr>
 
 <tr>
+<td>Checkmate</td>
+<td>1962</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cheeky Angel</td>
 <td>2004</td>
 <td>Viz</td>
@@ -20172,6 +20403,13 @@
 <td>1900</td>
 <td>Creator</td>
 <td><a href="ChesterGould/ChesterGould.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chester Gump Finds The Hidden Treasure</td>
+<td>1936</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20510,6 +20748,13 @@
 </tr>
 
 <tr>
+<td>Chitty Chitty Bang Bang</td>
+<td>1969</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>CHIX</td>
 <td>1998</td>
 <td>Image</td>
@@ -20556,6 +20801,13 @@
 <td>1991</td>
 <td>Epic</td>
 <td><a href="ChollyFlytrap/ChollyFlytrap.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Choo Choo Charlie</td>
+<td>1969</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20612,6 +20864,48 @@
 <td>1967</td>
 <td>Creator</td>
 <td><a href="ChrisWare/ChrisWare.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Christmas At The Ford Rotunda</td>
+<td>1955</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Christmas At The Rotunda</td>
+<td>1954</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Christmas Carol's Welcome To Hudson's Toyland Fun Book</td>
+<td>1958</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Christmas Dream</td>
+<td>1949</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Christmas Journey Through Space</td>
+<td>1960</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Christmas Story Book</td>
+<td>1953</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20730,6 +21024,20 @@
 <td>2020</td>
 <td>Ablaze</td>
 <td><a href="AblazePublishing/AblazePublishing.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cinderella</td>
+<td>1965</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cinderella In Fairest Of The Fair</td>
+<td>1955</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20893,6 +21201,13 @@
 </tr>
 
 <tr>
+<td>City Surgeon</td>
+<td>1963</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>City: The Mind In The Machine</td>
 <td>2014</td>
 <td>IDW</td>
@@ -20960,6 +21275,13 @@
 <td>2015</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Clash Of The Titans</td>
+<td>1981</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21767,6 +22089,13 @@
 </tr>
 
 <tr>
+<td>Colossal Show</td>
+<td>1969</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Colossi</td>
 <td>2017</td>
 <td>Vault</td>
@@ -22141,6 +22470,13 @@
 <td>1979</td>
 <td>King Features</td>
 <td><a href="KingFeatures/KingFeatures.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comics To Color</td>
+<td>1992</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -23085,6 +23421,13 @@
 <td>1950</td>
 <td>Amalgamated</td>
 <td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cowboy In Africa</td>
+<td>1968</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35410,6 +35753,13 @@
 </tr>
 
 <tr>
+<td>First Kingdom</td>
+<td>1974</td>
+<td>Bud Plant</td>
+<td><a href="FirstKingdom/FirstKingdom.html">Details</a></td>
+</tr>
+
+<tr>
 <td>First Love Illustrated</td>
 <td>1949</td>
 <td>Harvey</td>
@@ -42387,6 +42737,13 @@
 </tr>
 
 <tr>
+<td>Hattie Stewart</td>
+<td>2000</td>
+<td>Creator</td>
+<td><a href="HattieStewart/HattieStewart.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Haunt</td>
 <td>2009</td>
 <td>Image</td>
@@ -46787,6 +47144,13 @@
 <td>1920</td>
 <td>Creator</td>
 <td><a href="JackKamen/JackKamen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jack Katz</td>
+<td>1927</td>
+<td>Creator</td>
+<td><a href="JackKatz/JackKatz.html">Details</a></td>
 </tr>
 
 <tr>
