Slaughterhouse-Five Archaia

--- a/Archaia/Archaia.html
+++ b/Archaia/Archaia.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="../slideshow.css">
 <script src="../slideshow.js"></script>
-<title>Archaia Studios Press</title>
+<title>Archaia Entertainment</title>
 </head>
 
 <body>
@@ -71,12 +71,17 @@
 <div class="mySlides" style="text-align: center;"><img src="Archaia51.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Archaia52.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Archaia53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Archaia54.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+Archaia Entertainment, LLC, commonly known as Archaia (formerly known as Archaia Studios Press), is an imprint of American comic book and graphic novel publisher Boom! Studios. Archaia Entertainment, LLC was originally an American comic book publishing company established by Mark Smylie in 2002. On June 24, 2013, Archaia was acquired by Boom! Studios and became a wholly owned imprint.
+</p><p>
+Mark Smylie formed the company as a home for his comic book series Artesia. Archaia was bought by Kunoichi in October 2008, who relaunched the company in June 2009 as simply Archaia. Smylie was installed as Publisher while Stephen Christy was brought aboard as Director of Development. Kunoichi principal P.J. Bickett took over as CEO. In April 2010, Christy was named the company's Editor-in-Chief. In 2013, Archaia was acquired by Boom! Studios and converted from a stand-alone company into an imprint at the publisher. The Walt Disney Company inherited Fox's stake in Boom! Studios, therefore inheriting Fox's stake in Archaia Entertainment, after Disney acquired 21st Century Fox's assets on March 20, 2019.
+</p><p>
+Some of the publisher's comic series have been optioned for adaptation into film, including The Killer. In March, 2012, Warner Bros. announced it has picked up Sean Rubin’s upcoming graphic novel Bolivar for an intended animated feature film. Irish filmmaker Kealan O’Rourke has been attached to write and direct the project. Akiva Goldsman and Kerry Foster will produce the film through their Weed Road company. The graphic novel Rust was also picked up by 20th Century Fox. It has Aline Brosh McKenna attached to write and Simon Kinberg to produce.
 </p><p>
 Titles
 </p><p>
@@ -129,6 +134,7 @@ Titles
 <li><a href="Archaia46.jpg">Robotika</a> (2005)
 <li><a href="Archaia47.jpg">Secret History</a> (2007)
 <li><a href="Archaia48.jpg">Skrumps</a> (2011)
+<li><a href="Archaia54.jpg">Slaughterhouse-Five</a> (2020)
 <li><a href="Archaia49.jpg">Space: 1999: Aftershock and Awe</a> (2012)
 <li><a href="Archaia50.jpg">Starkweather: Immortal</a> (2007)
 <li><a href="Archaia51.jpg">Syndrome</a> (2010)
