--- a/SamKeith/SamKeith.html
+++ b/SamKeith/SamKeith.html
@@ -27,12 +27,15 @@
 <div class="mySlides" style="text-align: center;"><img src="SamKeith7.jpg"></div>   
 <div class="mySlides" style="text-align: center;"><img src="SamKeith8.jpg"></div>   
 <div class="mySlides" style="text-align: center;"><img src="SamKeith9.jpg"></div>   
+<div class="mySlides" style="text-align: center;"><img src="SamKeith10.jpg"></div>   
+<div class="mySlides" style="text-align: center;"><img src="SamKeith11.jpg"></div>   
+<div class="mySlides" style="text-align: center;"><img src="SamKeith12.jpg"></div>   
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Sam Kieth (born January 11, 1963) is an American comics artist and writer, best known as the creator of The Maxx and Zero Girl. Kieth first came to prominence in 1984 as the inker of Matt Wagner's Mage, and a year later as the inker of Fish Police. In 1989, he penciled the first five issues (the "Preludes & Nocturnes" story arc) of writer Neil Gaiman's celebrated series The Sandman and collaborated with Alan Grant on a Penguin story in Secret Origins Special #1. He illustrated two volumes of writer William Messner-Loebs' Epicurus the Sage, drew an Aliens miniseries for Dark Horse Comics, and drew The Incredible Hulk #368, which led to drawing numerous covers for Marvel Comics Presents. 
+Sam Kieth (1963) is an American comics artist and writer, best known as the creator of The Maxx and Zero Girl. Kieth first came to prominence in 1984 as the inker of Matt Wagner's Mage, and a year later as the inker of Fish Police. In 1989, he penciled the first five issues (the "Preludes & Nocturnes" story arc) of writer Neil Gaiman's celebrated series The Sandman and collaborated with Alan Grant on a Penguin story in Secret Origins Special #1. He illustrated two volumes of writer William Messner-Loebs' Epicurus the Sage, drew an Aliens miniseries for Dark Horse Comics, and drew The Incredible Hulk #368, which led to drawing numerous covers for Marvel Comics Presents. 
 </p><p>
 In 1993, Kieth left Marvel to create the original series The Maxx for fledgling publisher Image Comics. The Maxx ran 35 issues, all of which were plotted and illustrated by Kieth. William Messner-Loebs scripted #1–15 and Alan Moore wrote #21. In 1995, The Maxx was adapted as part of MTV's short-lived animation series MTV's Oddities, which included Eric Fogel's The Head. 
 </p>
