--- a/Western/Western.html
+++ b/Western/Western.html
@@ -563,7 +563,6 @@ Titles
 <li><a href="Western94.jpg">Gremlins</a> 	1984
 <li><a href="Western95.jpg">Grimm's Ghost Stories</a>	1972
 <li><a href="Western96.jpg">Gunsmoke</a>  1969
-<li><a href="Western97.jpg">Hanna-Barbera Yogi, the Prepared Bear</a>  1983
 <li><a href="Western98.jpg">Hanna-Barbera Bandwagon</a>  	1962
 <li><a href="Western99.jpg">Hanna-Barbera Hi-Adventure Heroes</a>  	1969
 <li><a href="Western100.jpg">Hanna-Barbera Scooby Doo... Where Are You!</a> 1970
@@ -571,6 +570,7 @@ Titles
 <li><a href="Western102.jpg">Hanna-Barbera Super TV Heroes</a> 	1968
 <li><a href="Western103.jpg">Hanna-Barbera Where's Huddles</a>  	1971
 <li><a href="Western104.jpg">Hanna-Barbera Yogi Bear D.A.R.E.</a>  1989
+<li><a href="Western97.jpg">Hanna-Barbera Yogi, The Prepared Bear</a>  1983
 <li><a href="Western105.jpg">Happy Days with the Fonz Kite Fun Book</a>  	1978	
 <li><a href="Western106.jpg">Hardy Boys</a>	1970
 <li><a href="Western107.jpg">Hawaiian Eye</a>	1963
