--- a/index.html
+++ b/index.html
@@ -7560,7 +7560,7 @@
 </tr>
 
 <tr>
-<td>Archaia Studio Press</td>
+<td>Archaia Entertainment</td>
 <td>2003</td>
 <td>Publisher</td>
 <td><a href="Archaia/Archaia.html">Details</a></td>
@@ -22347,7 +22347,7 @@
 </tr>
 
 <tr>
-<td>Comico</td>
+<td>Comico the Comic Company</td>
 <td>1982</td>
 <td>Publisher</td>
 <td><a href="Comico/Comico.html">Details</a></td>
@@ -23536,6 +23536,13 @@
 </tr>
 
 <tr>
+<td>Crackajack Funnies</td>
+<td>1938</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crackers</td>
 <td>1929</td>
 <td>Amalgamated</td>
@@ -23645,6 +23652,13 @@
 <td>2019</td>
 <td>Drawn And Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Creative First Aid: Yogi Bear Facts</td>
+<td>1986</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25223,6 +25237,13 @@
 </tr>
 
 <tr>
+<td>Dan Curtis Giveaways: Dagar The Invincible</td>
+<td>1974</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dan Dare Omnibus</td>
 <td>2009</td>
 <td>Dynamite</td>
@@ -25234,6 +25255,13 @@
 <td>1919</td>
 <td>Creator</td>
 <td><a href="DanDeCarlo/DanDeCarlo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dan Dunn Secret Operative 48</td>
+<td>1937</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25437,6 +25465,13 @@
 <td>2012</td>
 <td>Knockabout</td>
 <td><a href="Knockabout/Knockabout.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Darby O'Gill And The Little People</td>
+<td>1970</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26136,6 +26171,13 @@
 <td>1962</td>
 <td>Creator</td>
 <td><a href="DarwynCooke/DarwynCooke.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dastardly And Muttley Kite Fun Book</td>
+<td>1969</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26944,6 +26986,13 @@
 </tr>
 
 <tr>
+<td>Dear Nancy Parker</td>
+<td>1963</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Death And The Girls</td>
 <td>2015</td>
 <td>Blank Slate</td>
@@ -27354,6 +27403,13 @@
 <td>1972</td>
 <td>Marvel</td>
 <td><a href="Defenders/Defenders.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Defenders Of The Earth</td>
+<td>1986</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27819,6 +27875,20 @@
 </tr>
 
 <tr>
+<td>Deputy Dawg</td>
+<td>1965</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Deputy Dawg Presents Dinky Duck And Hashimoto-San</td>
+<td>1965</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Derf Backderf</td>
 <td>1959</td>
 <td>Creator</td>
@@ -28242,6 +28312,27 @@
 <td>1950</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dick Tracy</td>
+<td>1939</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dick Tracy: Hatfull o' Fun!</td>
+<td>1950</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dick Tracy: Sheds Light On The Mole</td>
+<td>1949</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -29085,6 +29176,13 @@
 </tr>
 
 <tr>
+<td>Doctor Solar, Man Of The Atom</td>
+<td>1962</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Doctor Spektor: Master Of The Occult</td>
 <td>2014</td>
 <td>Dynamite</td>
@@ -29562,6 +29660,13 @@
 
 <tr>
 <td>Donald Duck</td>
+<td>1938</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Donald Duck</td>
 <td>1952</td>
 <td>Dell</td>
 <td><a href="Dell/Dell.html">Details</a></td>
@@ -29603,10 +29708,52 @@
 </tr>
 
 <tr>
+<td>Donald Duck And The Red Feather</td>
+<td>1948</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Donald Duck Best Comics</td>
 <td>1978</td>
 <td>Abbeville</td>
 <td><a href="AbbevillePress/AbbevillePress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Donald Duck In Plotting Picknicker</td>
+<td>1962</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Donald Duck In The Litterbug</td>
+<td>1963</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Donald Duck Tells About Kites</td>
+<td>1954</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Donald Duck The Fair Fiasco</td>
+<td>1984</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Donald Duck's Surprise Party</td>
+<td>1948</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30279,6 +30426,13 @@
 <td>2009</td>
 <td>Devil's Due</td>
 <td><a href="DevilsDue/DevilsDue.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Draftie Of The U.S. Army</td>
+<td>1943</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30984,6 +31138,13 @@
 <td>2011</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Duke Of The K-9 Patrol</td>
+<td>1963</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -31841,6 +32002,13 @@
 </tr>
 
 <tr>
+<td>Eight Is Enough Kite Fun Book</td>
+<td>1979</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eight Legged Freaks</td>
 <td>2002</td>
 <td>Wildstorm</td>
@@ -32111,6 +32279,13 @@
 <td>2002</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ella Cinders</td>
+<td>1934</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32678,6 +32853,13 @@
 <td>1983</td>
 <td>Titan</td>
 <td><a href="Escape/Escape.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Escape From Box Canyon Kite Safety Fun Book</td>
+<td>1986</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33948,6 +34130,13 @@
 </tr>
 
 <tr>
+<td>Fall Of The Roman Empire</td>
+<td>1964</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fall Out Toy Works</td>
 <td>2009</td>
 <td>Image</td>
@@ -34102,10 +34291,24 @@
 </tr>
 
 <tr>
+<td>Famous Comics</td>
+<td>1963</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Famous Crimes</td>
 <td>1948</td>
 <td>Fox Comics</td>
 <td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Famous Fairy Tales</td>
+<td>1963</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36536,6 +36739,13 @@
 </tr>
 
 <tr>
+<td>Ford Rotunda Christmas Book</td>
+<td>1957</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Foreign Intrigues</td>
 <td>1956</td>
 <td>Charlton</td>
@@ -36736,6 +36946,13 @@
 <td>2013</td>
 <td>Archie</td>
 <td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fox And The Hound</td>
+<td>1981</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -37002,6 +37219,13 @@
 <td>2010</td>
 <td>Ape</td>
 <td><a href="ApeEntertainment/ApeEntertainment.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Freckles And His Friends</td>
+<td>1934</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38545,6 +38769,13 @@
 </tr>
 
 <tr>
+<td>Gay Purr-ee</td>
+<td>1963</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gayety</td>
 <td>1942</td>
 <td>Timely</td>
@@ -38661,6 +38892,13 @@
 <td>2000</td>
 <td>Wildstorm</td>
 <td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gene Autry</td>
+<td>1950</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -39826,6 +40064,13 @@
 </tr>
 
 <tr>
+<td>Go Bots</td>
+<td>1984</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Go Boy 7</td>
 <td>2003</td>
 <td>Dark Horse</td>
@@ -40190,6 +40435,13 @@
 </tr>
 
 <tr>
+<td>Golden Christmas Annual</td>
+<td>1975</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Golden Comics Digest</td>
 <td>1969</td>
 <td>Gold Key</td>
@@ -40201,6 +40453,13 @@
 <td>2017</td>
 <td>Viz</td>
 <td><a href="Viz/Viz.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Golden Picture Story Book</td>
+<td>1961</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40250,6 +40509,13 @@
 <td>1949</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gomer Pyle</td>
+<td>1966</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40327,6 +40593,13 @@
 <td>2009</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Goodbye, Mr. Chips</td>
+<td>1970</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40467,6 +40740,13 @@
 <td>2010</td>
 <td>Antarctic Press</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Governor And J.J.</td>
+<td>1970</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40929,6 +41209,13 @@
 <td>1989</td>
 <td>DC</td>
 <td><a href="Gregory/Gregory.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gremlins</td>
+<td>1984</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41590,6 +41877,13 @@
 </tr>
 
 <tr>
+<td>Gunsmoke</td>
+<td>1969</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gunsmoke Trail</td>
 <td>1957</td>
 <td>Farrell</td>
@@ -42212,6 +42506,13 @@
 </tr>
 
 <tr>
+<td>Hanna-Barbara Hi-Adventure Heroes</td>
+<td>1969</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hanna-Barbera Parade</td>
 <td>1971</td>
 <td>Charlton</td>
@@ -42275,6 +42576,27 @@
 </tr>
 
 <tr>
+<td>Hanna-Barbara Where's Huddles</td>
+<td>1971</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hanna-Barbara Yogi Bear D.A.R.E.</td>
+<td>1989</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hanna-Barbara Yogi, The Prepared Bear</td>
+<td>1983</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hans Christian Anderson</td>
 <td>1805</td>
 <td>Creator</td>
@@ -42307,6 +42629,13 @@
 <td>1979</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Happy Days With The Fonz Kite Fun Book</td>
+<td>1978</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -42856,6 +43185,13 @@
 </tr>
 
 <tr>
+<td>Hawaiian Eye</td>
+<td>1963</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hawken</td>
 <td>2011</td>
 <td>IDW</td>
@@ -43168,6 +43504,13 @@
 <td>1993</td>
 <td>Slave Labor</td>
 <td><a href="SlaveLabor/SlaveLabor.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hector Heathcote</td>
+<td>1964</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43910,6 +44253,13 @@
 <td>2008</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hey There, It's Yogi Bear</td>
+<td>1964</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47014,6 +47364,13 @@
 </tr>
 
 <tr>
+<td>It's About Time</td>
+<td>1967</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>It's Only A Game</td>
 <td>2004</td>
 <td>About Comics</td>
@@ -47966,6 +48323,13 @@
 </tr>
 
 <tr>
+<td>Jet Dream</td>
+<td>1968</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jetsons</td>
 <td>1963</td>
 <td>Gold Key</td>
@@ -48292,6 +48656,13 @@
 <td>2005</td>
 <td>Dark Horse</td>
 <td><a href="JingleBelleFightBeforeChristmas/JingleBelleFightBeforeChristmas.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jingle Bells Christmas Book</td>
+<td>1971</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -48687,6 +49058,13 @@
 </tr>
 
 <tr>
+<td>John Steele, Secret Agent</td>
+<td>1964</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>John Wick</td>
 <td>2017</td>
 <td>Dynamite</td>
@@ -48764,10 +49142,24 @@
 </tr>
 
 <tr>
+<td>Johnny Jingle's Lucky Day</td>
+<td>1956</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Johnny Nemo Magazine</a></td>
 <td>1985</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Johnny Quest</td>
+<td>1964</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -49089,6 +49481,13 @@
 <td>2005</td>
 <td>Alias</td>
 <td><a href="AliasEnterprises/AliasEnterprises.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Judge Colt</td>
+<td>1969</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50660,27 +51059,6 @@
 </tr>
 
 <tr>
-<td>King Of Cards</td>
-<td>2007</td>
-<td>Wildstorm</td>
-<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
-</tr>
-
-<tr>
-<td>King Of The Comics: 100 Years Of King Features</td>
-<td>2015</td>
-<td>IDW</td>
-<td><a href="IDW/IDW.html">Details</a></td>
-</tr>
-
-<tr>
-<td>King Of The Dead</td>
-<td>1994</td>
-<td>FantaCo</td>
-<td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
-</tr>
-
-<tr>
 <td>King Features Syndicate</td>
 <td>1914</td>
 <td>Publisher</td>
@@ -50709,10 +51087,38 @@
 </tr>
 
 <tr>
+<td>King Leonardo And His Short Subjects</td>
+<td>1962</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
+<td>King Of Cards</td>
+<td>2007</td>
+<td>Wildstorm</td>
+<td><a href="WildstormProductions/WildstormProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>King Of The Bad Men Of Deadwood</td>
 <td>1950</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>King Of The Comics: 100 Years Of King Features</td>
+<td>2015</td>
+<td>IDW</td>
+<td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>King Of The Dead</td>
+<td>1994</td>
+<td>FantaCo</td>
+<td><a href="FantaCoEnterprises/FantaCoEnterprises.html">Details</a></td> 
 </tr>
 
 <tr>
@@ -50727,6 +51133,13 @@
 <td>1948</td>
 <td>Dell</td>
 <td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>King Of The Royal Mounted In Arctic Law</td>
+<td>1937</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50874,6 +51287,13 @@
 <td>2014</td>
 <td>Monkeybrain</td>
 <td><a href="Kinski/Kinski.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kirby Shoes Comics Featuring Kirby the Golden Bear</td>
+<td>1959</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -73571,7 +73991,7 @@
 <td>Sam Keith</td>
 <td>1963</td>
 <td>Creator</td>
-<td><a href="SamKeith/SamKeith  .html">Details</a></td>
+<td><a href="SamKeith/SamKeith.html">Details</a></td>
 
 <tr>
 <td>Sam Slade, RoboHunter</td>
@@ -77369,6 +77789,13 @@
 <td>2017</td>
 <td>Alternative</a>
 <td><a href="AlternativeComics/AlternativeComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Slaughterhouse-Five</td>
+<td>2020</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
