--- a/index.html
+++ b/index.html
@@ -51675,6 +51675,13 @@
 </tr>
 
 <tr>
+<td>Knock Knock</td>
+<td>1936</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Knockabout Comics</td>
 <td>1978</td>
 <td>Publisher</td>
@@ -52186,6 +52193,13 @@
 </tr>
 
 <tr>
+<td>Lady And The Tramp</td>
+<td>1972</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lady Arcane</td>
 <td>1992</td>
 <td>Heroic</td>
@@ -52431,6 +52445,13 @@
 </tr>
 
 <tr>
+<td>Lancer</td>
+<td>1969</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Land Of Oz</td>
 <td>1998</td>
 <td>Arrow</td>
@@ -52456,6 +52477,13 @@
 <td>2005</td>
 <td>IDW</td>
 <td><a href="IDW/IDW.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Land Of The Giants</td>
+<td>1968</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52515,6 +52543,13 @@
 </tr>
 
 <tr>
+<td>Laredo</td>
+<td>1966</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Larks</td>
 <td>1927</td>
 <td>Amalgamated</td>
@@ -52554,6 +52589,13 @@
 <td>1949</td>
 <td>Fawcett</td>
 <td><a href="Fawcett/Fawcett.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lassie</td>
+<td>1962</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -52816,6 +52858,13 @@
 </tr>
 
 <tr>
+<td>Laurel And Hardy</td>
+<td>1967</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Law Of Dredd</td>
 <td>1988</td>
 <td>Fleetway Quality</td>
@@ -53012,6 +53061,13 @@
 </tr>
 
 <tr>
+<td>Legend Of Jesse James</td>
+<td>1966</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Legend Of Kamui: Perfect Collection</td>
 <td>1998</td>
 <td>Viz</td>
@@ -53044,6 +53100,13 @@
 <td>1994</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Legend Of The Lone Ranger</td>
+<td>1969</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53747,10 +53810,24 @@
 </tr>
 
 <tr>
+<td>Linus The Lion-Hearted</td>
+<td>1965</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lion</td>
 <td>1952</td>
 <td>Amalgamated</td>
 <td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lion</td>
+<td>1963</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53772,6 +53849,13 @@
 <td>2005</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lippy The Lion And Hardy Har Har</td>
+<td>1963</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -53992,6 +54076,13 @@
 </tr>
 
 <tr>
+<td>Little Klinker</td>
+<td>1960</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Little Lana</td>
 <td>1948</td>
 <td>Marvel</td>
@@ -54136,6 +54227,13 @@
 <td>1987</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Little Orphan Annie And The Big Town Gunmen</td>
+<td>1937</td>
+<td>Western</td>
+<td><a href="Western/Western.html">Details</a></td>
 </tr>
 
 <tr>
@@ -59769,6 +59867,13 @@
 <td>1947</td>
 <td>ACG</td>
 <td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mineshaft Magazine</td>
+<td>1999</td>
+<td>Everett Rand</td>
+<td><a href="Mineshaft/Mineshaft.html">Details</a></td>
 </tr>
 
 <tr>
